[metadata]
name = seda
version = 0.0.1
author = Pengxiang Xu
author_email = pengxiang.xu.dev@gmail.com
description = a Simple Exploratory Data Analysis package
long_description = file: README.md
long_description_content_type = text/markdown

# TODO to-be editted
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src